--- a/smartcab.ipynb
+++ b/smartcab.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: The Smart cab doesn't move at all during the simulation. It looks like the rewards are negative when there is a green light and positive when there is red light.**"
+    "**Answer:**"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:The num_dummies flag is set inside Environment() function. It changes the number of other cars inside the simulation. The default is 100 which puts a lot of cars on the grid. The grid_size flag is also set inside this funciton. This can be set with a 2D touple, and will change the number of horizontal and vertical roads depending on the input. Update delay of the simulation is set in the Simulator() function using the update_delay flag. This can help to speed up or slow down the simulation. It looks like the act funciton is called when the agent performs an action. The render_text() function generates text informations from the simulation for the command line while the render() function generates the GUI portion of the simulation. The next_waypoint() function considers East-West directions first. **"
+    "**Answer:**"
    ]
   },
   {
@@ -466,21 +466,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
